--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,20 @@ html, body {
     height: 98%;
     width: 98%;
     text-align: center;
+    background-color: black;
+    color: yellow;
+}
+h2 {
+    text-align: center;
 }
 
 .puzzle, .puzzle_form{
 }
-.puzzle_row{
+.puzzle{
+    border: outset 5px orange;
+}
+.puzzle_block{
+    
 }
 .puzzle_cell{
     border: solid 1px black;
@@ -24,10 +33,8 @@ html, body {
     width: 35%;
 }
 #submitted{
-    
 }
 #solved {
-    
 }
 .button {
     
