--- a/css/style.css
+++ b/css/style.css
@@ -12,16 +12,19 @@ h2 {
 .puzzle, .puzzle_form{
 }
 .puzzle{
-    border: outset 5px orange;
+    border: outset 5px salmon;
 }
 .puzzle_block{
-    
+    border: inset 5px green;
 }
-.puzzle_cell{
-    border: solid 1px black;
+.puzzle_input_cell, .puzzle_cell{
+    border: solid 1px gray;
     width: 20px;
     height: 20px;
     text-align: center;
+    margin:0;
+    background-color: gray;
+    color: black;
 }
 .spacer {
     display: inline-block;
